fixes, src code link

--- a/README.html
+++ b/README.html
@@ -1,2 +1,3 @@
 <p>Any questions, just ask stwalkerster on IRC/enwiki, or send an email :)</p>
+<p>Source code: https://github.com/enwikipedia-acc/rrdtool/</p>
 </body></html>
